cli/tests/lit/import-invalid-import-specifier.lit
// Test parsing import statements
// RUN: @parser @file

import { "foo" }
// CHECK: Parse error: Identifier expected
